Fix dimension mobile view

--- a/css/styles.css
+++ b/css/styles.css
@@ -222,7 +222,7 @@ body {
 	height:10%;
 	color:gray;
 	margin-right: auto;
-	margin-left:-1.5em;
+	margin-left:-2em;
 }
 
 .project-view-mobile li{
@@ -251,7 +251,7 @@ body {
 	height:10%;
 	color:gray;
 	margin-right: auto;
-	margin-left:-1.5em;
+	margin-left:-2em;
 }
 
 .contacts li{
